k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-project-base
  labels:
    app.kubernetes.io/name: base
    helm.sh/chart: base-1.1.3
    app.kubernetes.io/instance: react-project
    app: react-project
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: base
    app.kubernetes.io/instance: react-project
