k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: react-project-base
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
spec:
  to:
    kind: Service
    name: react-project-base
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
